--- a/css/personal.css
+++ b/css/personal.css
@@ -4,6 +4,28 @@
     background-color: #1ED760;
 }
 
+.chart-notes p {
+    display: block;
+    margin: 0;
+    line-height: 40px;
+}
+
+.chart-notes p:first-child {
+    margin-top: 30px;
+}
+
+.chart-notes a {
+    display: inline-block;
+    color: #1ED760;
+    margin: 0 5px;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+#container-3 {
+    margin-top: 60px;
+}
+
 /* TOP TRACKS */
 
 .tooltip-1 {
