--- a/css/personal.css
+++ b/css/personal.css
@@ -65,3 +65,31 @@ p {
     color: #FFF;
     font-size: 14px;
 }
+
+#tooltip {
+  border-radius: 0;
+  border: 2px solid #1ED760;
+  background-color: #FFF;
+  font-family: 'Dosis', sans-serif;
+  padding: 5px 10px; 
+}
+
+
+  
+#tooltip  span {
+font-size: 14px; 
+margin: 0 5px;
+vertical-align: middle;
+}
+
+#tooltip .data {
+    font-weight: 700; 
+}
+
+.circle-reference {
+  height: 15px;
+  width: 15px;
+  border-radius: 100%;
+  vertical-align: middle;
+  display: inline-block;  
+}
