--- a/css/component.css
+++ b/css/component.css
@@ -1,195 +1,365 @@
-.og-grid {
-	list-style: none;
-	padding: 20px 0;
-	margin: 0 auto;
-	text-align: center;
-	width: 100%;
+body {
+	overflow-x: hidden;
 }
 
-.og-grid li {
-	display: inline-block;
-	margin: 10px 5px 0 5px;
-	vertical-align: top;
-	height: 250px;
-}
-
-.og-grid li > a,
-.og-grid li > a img {
-	border: none;
-	outline: none;
-	display: block;
-	position: relative;
-}
-
-.og-grid li.og-expanded > a::after {
-	top: auto;
-	border: solid transparent;
-	content: " ";
-	height: 0;
-	width: 0;
-	position: absolute;
+.pseudo-scroller {
 	pointer-events: none;
-	border-bottom-color: #ddd;
-	border-width: 15px;
-	left: 50%;
-	margin: -20px 0 0 -15px;
 }
 
-.og-expander {
+.isolayer {
 	position: absolute;
-	background: #ddd;
-	top: auto;
+	top: 0;
 	left: 0;
-	width: 100%;
-	margin-top: 10px;
-	text-align: left;
-	height: 0;
-	overflow: hidden;
+	-webkit-transform-origin: 50% 100%;
+	transform-origin: 50% 100%;
 }
 
-.og-expander-inner {
-	padding: 50px 30px;
-	height: 100%;
+.js .grid,
+.js .grid__item,
+.js .grid__link {
+	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
 }
 
-.og-close {
-	position: absolute;
-	width: 40px;
-	height: 40px;
-	top: 20px;
-	right: 20px;
-	cursor: pointer;
-}
-
-.og-close::before,
-.og-close::after {
-	content: '';
-	position: absolute;
-	width: 100%;
-	top: 50%;
-	height: 1px;
-	background: #888;
-	-webkit-transform: rotate(45deg);
-	-moz-transform: rotate(45deg);
-	transform: rotate(45deg);
-}
-
-.og-close::after {
-	-webkit-transform: rotate(-45deg);
-	-moz-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-}
-
-.og-close:hover::before,
-.og-close:hover::after {
-	background: #333;
-}
-
-.og-fullimg,
-.og-details {
-	width: 50%;
-	float: left;
-	height: 100%;
-	overflow: hidden;
+.grid {
 	position: relative;
+	margin: 0 auto;
+	padding: 0;
+	list-style: none;
 }
 
-.og-details {
-	padding: 0 40px 0 20px;
+.grid__item {
+	width: 300px;
 }
 
-.og-fullimg {
-	text-align: center;
+.js .grid__item {
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 }
 
-.og-fullimg img {
-	display: inline-block;
-	max-height: 100%;
+.grid__link {
+	position: relative;
+	z-index: 1;
+	display: block;
+}
+
+.grid__img {
+	display: block;
 	max-width: 100%;
 }
 
-.og-details h3 {
-	font-weight: 300;
-	font-size: 52px;
-	padding: 40px 0 10px;
-	margin-bottom: 10px;
-}
-
-.og-details p {
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 22px;
-	color: #999;
-}
-
-.og-details a {
-	font-weight: 700;
-	font-size: 16px;
-	color: #333;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	padding: 10px 20px;
-	border: 3px solid #333;
-	display: inline-block;
-	margin: 30px 0 0;
-	outline: none;
-}
-
-.og-details a::before {
-	content: '\2192';
-	display: inline-block;
-	margin-right: 10px;
-}
-
-.og-details a:hover {
-	border-color: #999;
-	color: #999;
-}
-
-.og-loading {
-	width: 20px;
-	height: 20px;
-	border-radius: 50%;
-	background: #ddd;
-	box-shadow: 0 0 1px #ccc, 15px 30px 1px #ccc, -15px 30px 1px #ccc;
+.grid__title {
+	font-size: 0.85em;
+	font-weight: 600;
 	position: absolute;
+	z-index: -1;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	opacity: 0;
+	color: #fff;
+	-webkit-transform: translate3d(0,-20px,0);
+	transform: translate3d(0,-20px,0);
+	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+	transition: transform 0.3s, opacity 0.3s;
+}
+
+.grid__item:hover .grid__title {
+	opacity: 1;
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+}
+
+.layer {
+	position: relative;
+	display: block;
+}
+
+.layer:not(:first-child) {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* Shadow effect */
+.isolayer--shadow .grid__link::before {
+	content: '';
+	position: absolute;
+	z-index: -1;
+	top: 5px;
+	right: 5px;
+	bottom: 5px;
+	left: 5px;
+	opacity: 0.6;
+	background: rgba(0,0,0,0.8);
+	box-shadow: 0 0 0 0 rgba(0,0,0,0.8);
+	-webkit-transform: translateZ(-1px) scale(0.95);
+	transform: translateZ(-1px) scale(0.95);
+	-webkit-transition: transform 0.3s, opacity 0.3s, box-shadow 0.3s;
+	transition: transform 0.3s, opacity 0.3s, box-shadow 0.3s;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.isolayer--shadow .grid__item:hover .grid__link::before {
+	opacity: 0.2;
+	box-shadow: 0 0 20px 10px rgba(0,0,0,0.8);
+	-webkit-transform: translateZ(-1px) scale(1);
+	transform: translateZ(-1px) scale(1);
+}
+
+/* All individual isometric grid layouts (static and scrollable) */
+.isolayer--scroll1 {
+	width: 70vw;
+	max-width: 1200px;
+	height: calc(100vh - 280px);
+}
+
+.isolayer--scroll1 .grid__item {
+	width: 300px;
+	padding: 15px;
+}
+
+.isolayer--deco1 {
+	width: 1200px;
+	height: 900px;
+}
+
+.isolayer--deco1 .grid__link .layer:first-child:not(img) {
+	background: #ac5cf5;
+}
+
+.isolayer--deco1 .grid__link .layer:nth-child(2):not(img) {
+	background: #5db4eb;
+}
+
+.isolayer--deco1 .grid__link .layer:nth-child(3):not(img) {
+	background: #5debb4;
+}
+
+.isolayer--deco1 .grid__link div.layer {
+	width: 370px;
+	height: 270px;
+	opacity: 0.4;
+}
+
+.isolayer--deco1 .grid__item {
+	width: 400px;
+	height: 300px;
+	padding: 15px;
+}
+
+.isolayer--deco1 .grid__item:nth-child(2) {
+	margin-top: 150px;
+}
+
+.isolayer--deco2 {
+	width: 1200px;
+	height: 100vh;
+}
+
+.isolayer--deco2 .grid__item {
+	padding: 20px;
+}
+
+.isolayer--deco2 .grid__link .layer {
+	border: 20px solid #fff;
+	border-width: 40px 20px;
+	box-shadow: -1px 1px 5px rgba(0,0,0,0.08);
+}
+
+.isolayer--deco3 {
+	width: 960px;
+	height: 500px;
+}
+
+.isolayer--deco3 .grid__item {
+	width: 240px;
+	height: 320px;
+	padding: 0;
+}
+
+.isolayer--deco3 .grid__item:nth-child(2),
+.isolayer--deco3 .grid__item:nth-child(4) {
+	margin-top: -160px;
+}
+
+.isolayer--deco3 .grid__link,
+.isolayer--deco3 .layer {
+	width: 100%;
+	height: 100%;
+}
+
+.isolayer--deco3 .layer {
+	text-align: center;
+	background: #fff;
+	-webkit-transform-origin: 0% 50%;
+	transform-origin: 0% 50%;
+}
+
+.isolayer--deco3 .grid__link:hover .layer:not(:first-child) {
+	box-shadow: 2px 0 2px rgba(0,0,0,0.1);
+}
+
+.isolayer--deco3 .grid__item:nth-child(2n) .layer {
+	background: #f7d2dc;
+}
+
+.isolayer--deco3 .grid__item:nth-child(3n) .layer {
+	background: #fff0f3;
+}
+
+.isolayer--deco3 .grid__item:nth-child(4n) .layer {
+	background: #e9c5cc;
+}
+
+.isolayer--deco3 .grid__item:nth-child(5n) .layer {
+	background: #d6cbcd;
+}
+
+.isolayer--deco3 .grid__item:nth-child(7n) .layer {
+	background: #ffc9d8;
+}
+
+.isolayer--deco3 .layer {
+	width: 100%;
+	height: 100%;
+}
+
+.isolayer--deco3 .decoletter {
+	font-size: 6em;
+	font-weight: 900;
+	line-height: 1;
+	display: block;
+	padding: 70px 0 0 0;
+	color: #000;
+	color: #000;
+}
+
+.isolayer--deco3 .deconumber {
+	font-size: 3em;
+	display: block;
+	color: #000;
+}
+
+.isolayer--deco4 {
+	width: 1000px;
+	height: 900px;
+}
+
+.isolayer--deco4 .grid__item {
+	padding: 15px;
+}
+
+.isolayer--deco4 .grid__link .layer:first-child:not(img) {
+	background: #ac5cf5;
+}
+
+.isolayer--deco4 .grid__link .layer:nth-child(2):not(img) {
+	background: #5db4eb;
+}
+
+.isolayer--deco4 .grid__link .layer:nth-child(3):not(img) {
+	background: #5debb4;
+}
+
+.isolayer--deco4 .grid__link .layer {
+	-webkit-transform-origin: 50% 100%;
+	transform-origin: 50% 100%;
+}
+
+.isolayer--deco4 .grid__link div.layer {
+	width: 270px;
+	height: 203px;
+	opacity: 0.4;
+}
+
+.isolayer--deco4 .grid__item {
+	width: 300px;
+	height: 225px;
+	padding: 15px;
+}
+
+/* Flip effect for the scrollable grid */
+
+.js .grid--effect-flip .grid__item {
+	opacity: 0;
+}
+
+.js .grid--effect-flip .grid__item.shown {
+	opacity: 1;
+}
+
+.grid--effect-flip .grid__item.animate {
+	-webkit-transform: translateY(800px);
+	transform: translateY(800px);
+	-webkit-animation: moveUp 1s cubic-bezier(0.2,1,0.3,1) forwards;
+	animation: moveUp 1s cubic-bezier(0.2,1,0.3,1) forwards;
+}
+
+@-webkit-keyframes moveUp {
+	100% {
+		opacity: 1; 
+		-webkit-transform: translateY(0px);
+		transform: translateY(0px);
+	}
+}
+
+@keyframes moveUp {
+	100% {
+		opacity: 1; 
+		-webkit-transform: translateY(0px);
+		transform: translateY(0px);
+	}
+}
+
+/* Loading effect */
+.js .grid {
+	opacity: 0;
+	-webkit-transition: opacity 0.3s;
+	transition: opacity 0.3s;
+}
+
+.js .grid.grid--loaded {
+	opacity: 1;
+}
+
+.js body::after {
+	content: '';
+	position: fixed;
+	z-index: 1000;
 	top: 50%;
 	left: 50%;
-	margin: -25px 0 0 -25px;
-	-webkit-animation: loader 0.5s infinite ease-in-out both;
-	-moz-animation: loader 0.5s infinite ease-in-out both;
-	animation: loader 0.5s infinite ease-in-out both;
+	width: 70px;
+	height: 70px;
+	margin: -35px 0 0 -35px;
+	pointer-events: none;
+	border: 3px solid #fff;
+	border-right-color: #323f5c;
+	border-radius: 50%;
+	-webkit-transition: opacity 0.3s;
+	transition: opacity 0.3s;
+	-webkit-animation: rotateCircle 0.7s linear infinite forwards;
+	animation: rotateCircle 0.7s linear infinite forwards;
 }
 
-@-webkit-keyframes loader {
-	0% { background: #ddd; }
-	33% { background: #ccc; box-shadow: 0 0 1px #ccc, 15px 30px 1px #ccc, -15px 30px 1px #ddd; }
-	66% { background: #ccc; box-shadow: 0 0 1px #ccc, 15px 30px 1px #ddd, -15px 30px 1px #ccc; }
+@-webkit-keyframes rotateCircle {
+	to {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
 }
 
-@-moz-keyframes loader {
-	0% { background: #ddd; }
-	33% { background: #ccc; box-shadow: 0 0 1px #ccc, 15px 30px 1px #ccc, -15px 30px 1px #ddd; }
-	66% { background: #ccc; box-shadow: 0 0 1px #ccc, 15px 30px 1px #ddd, -15px 30px 1px #ccc; }
+@keyframes rotateCircle {
+	to {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
 }
 
-@keyframes loader {
-	0% { background: #ddd; }
-	33% { background: #ccc; box-shadow: 0 0 1px #ccc, 15px 30px 1px #ccc, -15px 30px 1px #ddd; }
-	66% { background: #ccc; box-shadow: 0 0 1px #ccc, 15px 30px 1px #ddd, -15px 30px 1px #ccc; }
-}
 
-@media screen and (max-width: 830px) {
-
-	.og-expander h3 { font-size: 32px; }
-	.og-expander p { font-size: 13px; }
-	.og-expander a { font-size: 12px; }
-
-}
-
-@media screen and (max-width: 650px) {
-
-	.og-fullimg { display: none; }
-	.og-details { float: none; width: 100%; }
-	
+.js body.grid-loaded::after {
+	opacity: 0;
 }
